test/negative/feature_instanceinitializers.java

public class feature_instanceinitializers {
  public feature_instanceinitializers() {}
  public int x;
  { x = 42; }
}

